--- a/FootPrint/Confu/ch/Home/view/HomeHeadFirstCell.xib
+++ b/FootPrint/Confu/ch/Home/view/HomeHeadFirstCell.xib
@@ -11,17 +11,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="HomeHeadFirstCell">
-            <rect key="frame" x="0.0" y="0.0" width="339" height="99"/>
+            <rect key="frame" x="0.0" y="0.0" width="339" height="81"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="339" height="99"/>
+                <rect key="frame" x="0.0" y="0.0" width="339" height="81"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9dn-lw-s1B">
-                        <rect key="frame" x="5" y="5" width="329" height="89"/>
+                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9dn-lw-s1B">
+                        <rect key="frame" x="40" y="0.0" width="279" height="61"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qWq-l4-PIp">
-                                <rect key="frame" x="12" y="9" width="118.5" height="71"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qWq-l4-PIp">
+                                <rect key="frame" x="12" y="12" width="119" height="66"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                         <integer key="value" value="4"/>
@@ -29,38 +29,38 @@
                                 </userDefinedRuntimeAttributes>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="7月28日 20:00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FiN-KF-tF8">
-                                <rect key="frame" x="55" y="65" width="70.5" height="12"/>
+                                <rect key="frame" x="51" y="59" width="70.5" height="12"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="知乎营销课程全网营销课程全网营销课程全网营销课程" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N93-xB-h5R">
-                                <rect key="frame" x="139.5" y="8" width="177.5" height="36"/>
+                                <rect key="frame" x="135.5" y="4" width="187.5" height="36"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                 <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="course_video" translatesAutoresizingMaskIntoConstraints="NO" id="1Nc-4F-Icr">
-                                <rect key="frame" x="137.5" y="68" width="0.0" height="12"/>
+                                <rect key="frame" x="133.5" y="62" width="0.0" height="12"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="12" id="Upt-dp-4cr"/>
                                     <constraint firstAttribute="width" id="tiI-m2-nK4"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2000人已预约" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AkO-jw-TD0">
-                                <rect key="frame" x="141.5" y="65.5" width="79" height="14.5"/>
+                                <rect key="frame" x="137.5" y="55.5" width="79" height="14.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="327人在学" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VuP-ps-h42">
-                                <rect key="frame" x="258.5" y="65.5" width="58.5" height="14.5"/>
+                                <rect key="frame" x="264.5" y="55.5" width="58.5" height="14.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="0.56470588239999997" green="0.57647058819999997" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cmV-Sb-OtI">
-                                <rect key="frame" x="257" y="61" width="60" height="24"/>
+                                <rect key="frame" x="263" y="51" width="60" height="24"/>
                                 <color key="backgroundColor" red="1" green="0.95294117647058818" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="3yR-5l-P0A"/>
@@ -89,14 +89,14 @@
                             <constraint firstItem="N93-xB-h5R" firstAttribute="top" secondItem="qWq-l4-PIp" secondAttribute="top" constant="-1" id="KkI-A3-K6z"/>
                             <constraint firstAttribute="trailing" secondItem="cmV-Sb-OtI" secondAttribute="trailing" constant="12" id="MJj-3v-k6R"/>
                             <constraint firstAttribute="trailing" secondItem="N93-xB-h5R" secondAttribute="trailing" constant="12" id="N9x-nr-XBN"/>
-                            <constraint firstItem="qWq-l4-PIp" firstAttribute="leading" secondItem="9dn-lw-s1B" secondAttribute="leading" constant="12" id="OOw-8B-Awv"/>
+                            <constraint firstItem="qWq-l4-PIp" firstAttribute="leading" secondItem="9dn-lw-s1B" secondAttribute="leading" constant="6" id="OOw-8B-Awv"/>
                             <constraint firstItem="qWq-l4-PIp" firstAttribute="centerY" secondItem="9dn-lw-s1B" secondAttribute="centerY" id="POn-c5-lwL"/>
                             <constraint firstItem="cmV-Sb-OtI" firstAttribute="centerY" secondItem="AkO-jw-TD0" secondAttribute="centerY" id="Qpf-uB-gIj"/>
                             <constraint firstItem="1Nc-4F-Icr" firstAttribute="bottom" secondItem="qWq-l4-PIp" secondAttribute="bottom" id="cl0-p0-CXO"/>
                             <constraint firstAttribute="bottom" secondItem="AkO-jw-TD0" secondAttribute="bottom" constant="9" id="gKm-7S-1kd"/>
                             <constraint firstItem="AkO-jw-TD0" firstAttribute="leading" secondItem="1Nc-4F-Icr" secondAttribute="trailing" constant="4" id="hXO-t3-MtR"/>
                             <constraint firstItem="1Nc-4F-Icr" firstAttribute="leading" secondItem="qWq-l4-PIp" secondAttribute="trailing" constant="7" id="rvG-jQ-G66"/>
-                            <constraint firstItem="qWq-l4-PIp" firstAttribute="top" secondItem="9dn-lw-s1B" secondAttribute="top" constant="9" id="ws5-DA-2jv"/>
+                            <constraint firstItem="qWq-l4-PIp" firstAttribute="top" secondItem="9dn-lw-s1B" secondAttribute="top" constant="5" id="ws5-DA-2jv"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -108,12 +108,12 @@
             </view>
             <viewLayoutGuide key="safeArea" id="SEy-5g-ep8"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="9dn-lw-s1B" secondAttribute="bottom" constant="5" id="2cY-oL-Blr"/>
+                <constraint firstAttribute="bottom" secondItem="9dn-lw-s1B" secondAttribute="bottom" constant="1" id="2cY-oL-Blr"/>
                 <constraint firstItem="9dn-lw-s1B" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="QV8-bj-V6J"/>
-                <constraint firstItem="9dn-lw-s1B" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="eRs-c4-YML"/>
-                <constraint firstAttribute="trailing" secondItem="9dn-lw-s1B" secondAttribute="trailing" constant="5" id="eoI-5v-uw6"/>
+                <constraint firstItem="9dn-lw-s1B" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="1" id="eRs-c4-YML"/>
+                <constraint firstAttribute="trailing" secondItem="9dn-lw-s1B" secondAttribute="trailing" constant="-1" id="eoI-5v-uw6"/>
             </constraints>
-            <size key="customSize" width="339" height="99"/>
+            <size key="customSize" width="339" height="81"/>
             <connections>
                 <outlet property="coverImageView" destination="qWq-l4-PIp" id="g1W-4G-DlZ"/>
                 <outlet property="priceLabel" destination="AkO-jw-TD0" id="o6c-2I-L4T"/>
@@ -121,7 +121,7 @@
                 <outlet property="timeLabel" destination="FiN-KF-tF8" id="EmF-q8-M27"/>
                 <outlet property="titleLabel" destination="N93-xB-h5R" id="A0O-8S-k7c"/>
             </connections>
-            <point key="canvasLocation" x="-84.782608695652186" y="-21.763392857142858"/>
+            <point key="canvasLocation" x="-78.985507246376812" y="-46.540178571428569"/>
         </collectionViewCell>
     </objects>
     <resources>
