--- a/FootPrint/Confu/source/xib/Mine/MineHeadView.xib
+++ b/FootPrint/Confu/source/xib/Mine/MineHeadView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,7 +15,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f8d-yK-qEj">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="240"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="295"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mine_headBg" translatesAutoresizingMaskIntoConstraints="NO" id="pgr-2J-Acz">
                             <rect key="frame" x="0.0" y="-56" width="375" height="330.5"/>
@@ -55,11 +55,60 @@
                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hWM-WO-ZmQ" userLabel="Line">
-                            <rect key="frame" x="0.0" y="230" width="375" height="10"/>
+                        <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hWM-WO-ZmQ" userLabel="Line">
+                            <rect key="frame" x="0.0" y="230" width="375" height="65"/>
+                            <subviews>
+                                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hwB-Hk-zcT">
+                                    <rect key="frame" x="15" y="15" width="345" height="65"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PiV-S5-ZAw">
+                                            <rect key="frame" x="1" y="1" width="343" height="50"/>
+                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="10" maxY="0.0"/>
+                                            <state key="normal" image="mine_vip_arrow"/>
+                                        </button>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mine_vip_leftlogo" translatesAutoresizingMaskIntoConstraints="NO" id="q0Y-Kc-lrp">
+                                            <rect key="frame" x="15" y="16" width="20" height="20"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="成为脚印VIP" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Gl-tt-sGs">
+                                            <rect key="frame" x="40" y="16" width="91" height="20"/>
+                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
+                                            <color key="textColor" red="0.92549019607843142" green="0.80392156862745101" blue="0.69411764705882351" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="享多门会员课与购课优惠" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CxX-dc-zcr">
+                                            <rect key="frame" x="175" y="18" width="146" height="16"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                            <color key="textColor" red="0.92549019610000005" green="0.80392156859999997" blue="0.69411764710000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" red="0.14851555229999999" green="0.1645517349" blue="0.17707395549999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <constraints>
+                                        <constraint firstItem="9Gl-tt-sGs" firstAttribute="centerY" secondItem="PiV-S5-ZAw" secondAttribute="centerY" id="1W7-aT-aKk"/>
+                                        <constraint firstAttribute="height" constant="65" id="Tjp-aT-pYk"/>
+                                        <constraint firstAttribute="trailing" secondItem="PiV-S5-ZAw" secondAttribute="trailing" constant="1" id="dnm-s0-97S"/>
+                                        <constraint firstItem="9Gl-tt-sGs" firstAttribute="leading" secondItem="hwB-Hk-zcT" secondAttribute="leading" constant="40" id="eUh-Z3-Jka"/>
+                                        <constraint firstItem="9Gl-tt-sGs" firstAttribute="top" secondItem="hwB-Hk-zcT" secondAttribute="top" constant="16" id="hUy-wF-twt"/>
+                                        <constraint firstAttribute="trailing" secondItem="CxX-dc-zcr" secondAttribute="trailing" constant="24" id="jh5-fQ-FcW"/>
+                                        <constraint firstItem="PiV-S5-ZAw" firstAttribute="leading" secondItem="hwB-Hk-zcT" secondAttribute="leading" constant="1" id="lMc-5t-Mif"/>
+                                        <constraint firstItem="CxX-dc-zcr" firstAttribute="centerY" secondItem="9Gl-tt-sGs" secondAttribute="centerY" id="oke-Bd-8Ph"/>
+                                        <constraint firstItem="PiV-S5-ZAw" firstAttribute="top" secondItem="hwB-Hk-zcT" secondAttribute="top" constant="1" id="vJa-Oz-Bcf"/>
+                                        <constraint firstItem="q0Y-Kc-lrp" firstAttribute="leading" secondItem="hwB-Hk-zcT" secondAttribute="leading" constant="15" id="wvN-YT-c2F"/>
+                                        <constraint firstItem="q0Y-Kc-lrp" firstAttribute="centerY" secondItem="9Gl-tt-sGs" secondAttribute="centerY" id="xZO-Hc-mHd"/>
+                                    </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <integer key="value" value="8"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                </view>
+                            </subviews>
                             <color key="backgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="10" id="3As-U5-J9Z"/>
+                                <constraint firstAttribute="height" constant="65" id="3As-U5-J9Z"/>
+                                <constraint firstItem="hwB-Hk-zcT" firstAttribute="top" secondItem="hWM-WO-ZmQ" secondAttribute="top" constant="15" id="8Pt-ig-mdd"/>
+                                <constraint firstAttribute="trailing" secondItem="hwB-Hk-zcT" secondAttribute="trailing" constant="15" id="LkV-ea-eBG"/>
+                                <constraint firstItem="hwB-Hk-zcT" firstAttribute="leading" secondItem="hWM-WO-ZmQ" secondAttribute="leading" constant="15" id="wV8-p1-77i"/>
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Du8-iS-Xqu" userLabel="CouseBg">
@@ -107,7 +156,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="积分" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rk9-yJ-83r">
-                                    <rect key="frame" x="46.5" y="89.5" width="22.5" height="13.5"/>
+                                    <rect key="frame" x="45" y="89.5" width="25" height="14.5"/>
                                     <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                     <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
@@ -175,13 +224,13 @@
                         <constraint firstItem="llp-Gf-cgc" firstAttribute="leading" secondItem="Du8-iS-Xqu" secondAttribute="trailing" id="l6P-tf-Omh"/>
                         <constraint firstItem="Zvk-HP-jga" firstAttribute="top" secondItem="95w-ZC-u9J" secondAttribute="bottom" constant="4" id="lcK-sp-3Kt"/>
                         <constraint firstItem="mWE-zF-MvS" firstAttribute="leading" secondItem="f8d-yK-qEj" secondAttribute="leading" id="nV3-bP-W2Q"/>
+                        <constraint firstItem="hWM-WO-ZmQ" firstAttribute="top" secondItem="Du8-iS-Xqu" secondAttribute="bottom" constant="10" id="qNN-PV-MRK"/>
                         <constraint firstItem="hWM-WO-ZmQ" firstAttribute="top" secondItem="Zvk-HP-jga" secondAttribute="bottom" constant="12" id="rNY-UC-Wii"/>
                         <constraint firstItem="nL7-0C-kVz" firstAttribute="bottom" secondItem="qHW-mF-FIO" secondAttribute="bottom" id="szx-Mc-SHC"/>
-                        <constraint firstAttribute="bottom" secondItem="Du8-iS-Xqu" secondAttribute="bottom" constant="20" id="vwt-N5-cgy"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N3S-zH-rpk">
-                    <rect key="frame" x="0.0" y="250" width="375" height="130"/>
+                    <rect key="frame" x="0.0" y="295" width="375" height="130"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="本周学习情况" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cze-CO-JBe">
                             <rect key="frame" x="12" y="16" width="98" height="19.5"/>
@@ -257,7 +306,7 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="N3S-zH-rpk" secondAttribute="trailing" id="NDb-60-VVc"/>
                 <constraint firstItem="N3S-zH-rpk" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="VuQ-rN-a3z"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="N3S-zH-rpk" secondAttribute="bottom" constant="10" id="g78-af-Hbt"/>
-                <constraint firstItem="N3S-zH-rpk" firstAttribute="top" secondItem="f8d-yK-qEj" secondAttribute="bottom" constant="10" id="hgx-Mt-LCE"/>
+                <constraint firstItem="N3S-zH-rpk" firstAttribute="top" secondItem="f8d-yK-qEj" secondAttribute="bottom" id="hgx-Mt-LCE"/>
                 <constraint firstItem="f8d-yK-qEj" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="sA1-uA-dFC"/>
             </constraints>
             <connections>
@@ -269,6 +318,9 @@
                 <outlet property="lblTitle" destination="95w-ZC-u9J" id="4qn-f9-Hgk"/>
                 <outlet property="loginBtn" destination="mWE-zF-MvS" id="HQk-Yk-XLG"/>
                 <outlet property="scrollView" destination="TrZ-z1-ZL9" id="1ER-xd-tbM"/>
+                <outlet property="vipArrowButton" destination="PiV-S5-ZAw" id="6ef-dP-v5Z"/>
+                <outlet property="vipContentLabel" destination="CxX-dc-zcr" id="vcF-GO-CAb"/>
+                <outlet property="vipTitleLabel" destination="9Gl-tt-sGs" id="8S1-iV-CHb"/>
             </connections>
             <point key="canvasLocation" x="103.2" y="28.335832083958024"/>
         </view>
@@ -276,5 +328,7 @@
     <resources>
         <image name="head_default" width="64" height="64"/>
         <image name="mine_headBg" width="375" height="330.5"/>
+        <image name="mine_vip_arrow" width="11" height="11"/>
+        <image name="mine_vip_leftlogo" width="20" height="20"/>
     </resources>
 </document>
